--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
 
         </ul>
       </div>
+      <button id="theme-toggle" class="theme-toggle" title="Toggle Dark/Light Mode">
+        <i class="fas fa-moon"></i>
+      </button>
     </div>
   </nav>
   <!-- End of Nav-bar -->
