--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </div>
     </div> -->
   <!-- note:Nav-bar -->
-  <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
+  <nav class="navbar navbar-expand-lg sticky-top">
+    <div class="container">
       <a class="navbar-brand text-white" href="#">J<span>tech</span></a>
       <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
