--- a/index.html
+++ b/index.html
@@ -79,9 +79,15 @@
 
         </ul>
       </div>
-      <button id="theme-toggle" class="theme-toggle" title="Toggle Dark/Light Mode">
-        <i class="fas fa-moon"></i>
-      </button>
+      <div class="theme-switch-wrapper">
+        <label class="theme-switch" for="theme-toggle">
+          <input type="checkbox" id="theme-toggle" />
+          <div class="slider round">
+            <i class="fas fa-sun"></i>
+            <i class="fas fa-moon"></i>
+          </div>
+        </label>
+      </div>
     </div>
   </nav>
   <!-- End of Nav-bar -->
