Restructure features section: replaced basic containers with modern card grid

--- a/index.html
+++ b/index.html
@@ -153,40 +153,49 @@
   </div> -->
 
   <!-- --------------------------------------------------------------------------------------------------- -->
-  <div class="container-1">
-    <h3>You deserve a website that works for you!</h3>
-    <p>
-      Your website should help you find new clients, make it easier for
-      customers to do business with <br />
-      you and be flexible enough that you can make updates fast and easy.
-    </p>
-  </div>
-  <div class="container-2">
-    <div>
-      <img src="img/responsive.png" alt="" />
-      <h3>Beautiful & Mobile Friendly</h3>
-      <p>
-        We design beautiful, mobile-friendly, fast and secure websites that
-        are focused on attracting more customers.
-      </p>
+  <section class="features-section">
+    <div class="container">
+      <div class="features-intro">
+        <h3>You deserve a website that works for you!</h3>
+        <p>
+          Your website should help you find new clients, make it easier for
+          customers to do business with you and be flexible enough that you can make updates fast and easy.
+        </p>
+      </div>
+      <div class="features-grid">
+        <div class="feature-card">
+          <div class="feature-icon">
+            <img src="img/responsive.png" alt="Responsive Design" />
+          </div>
+          <h3>Beautiful & Mobile Friendly</h3>
+          <p>
+            We design beautiful, mobile-friendly, fast and secure websites that
+            are focused on attracting more customers.
+          </p>
+        </div>
+        <div class="feature-card">
+          <div class="feature-icon">
+            <img src="img/marketing.png" alt="Marketing Message" />
+          </div>
+          <h3>Clear Marketing Message</h3>
+          <p>
+            We help you create a clear marketing message for your business so your
+            customers understand exactly what you offer.
+          </p>
+        </div>
+        <div class="feature-card">
+          <div class="feature-icon">
+            <img src="img/magnet.png" alt="Attract Customers" />
+          </div>
+          <h3>Attract More Customers</h3>
+          <p>
+            Your customers are out there. We will help them find you, trust you
+            and buy from you – then spread the word around.
+          </p>
+        </div>
+      </div>
     </div>
-    <div>
-      <img src="img/marketing.png" alt="" />
-      <h3>Clear Marketing Message</h3>
-      <p>
-        We help you create a clear marketing message for your business so your
-        customers understand exactly what you offer.
-      </p>
-    </div>
-    <div>
-      <img src="img/magnet.png" alt="" />
-      <h3>Attract More Customers</h3>
-      <p>
-        Your customers are out there. We will help them find you, trust you
-        and buy from you – then spread the word around.
-      </p>
-    </div>
-  </div>
+  </section>
   <!-- --------------------------------------------------------------------------------------------------------------------------------------- -->
 
 
@@ -213,7 +222,8 @@
         <img src="img/24-hours-service.png" alt="" />
         <h4>24/7 Support</h4>
         <p>
-          Rest easy knowing that our dedicated support team is available around the clock to address any questions or
+          Rest easy knowing that our dedicated support team is available around the clock to address any questions
+          or
           concerns.
         </p>
       </div>
@@ -236,7 +246,8 @@
         <img src="img/color-options.png" alt="" />
         <h4>Color Options</h4>
         <p>
-          Make a lasting impression with a custom color palette that reflects your brand identity and captivates your
+          Make a lasting impression with a custom color palette that reflects your brand identity and captivates
+          your
           audience.
         </p>
       </div>
@@ -295,7 +306,8 @@
     <div class="feedback">
       <h2>"</h2>
       <h5>Exceptional service from start to finish.</h5>
-      <p>Jtech's attention to detail and commitment to excellence are truly commnendable.A pleasure to work with you!
+      <p>Jtech's attention to detail and commitment to excellence are truly commnendable.A pleasure to work with
+        you!
       </p>
       <div class="title-name">
         <h6>Michael Jason, CEO Yfreek</h6>
@@ -400,7 +412,8 @@
         <img src="img/DSC_0607-2.jpg" alt="">
         <h4>Victor Kai</h4>
         <h6>Software Engineer</h6>
-        <p>Our coding maestro, turning complex concepts into elegant solutions. His expertise in backend technologies
+        <p>Our coding maestro, turning complex concepts into elegant solutions. His expertise in backend
+          technologies
           ensures that our web applications are robust, scalable, and always ahead of the curve.</p>
       </div>
       <div class="team-image">
@@ -496,8 +509,10 @@
   <details>
     <summary>How long does it take to complete a project?</summary>
     <div class="content-text">
-      <p>The timeline for completing a project can vary depending on its complexity and scope.We strive to deliver high
-        quality results within a reasonable timeframe, ensuring that your project meets both deadlines and expections.
+      <p>The timeline for completing a project can vary depending on its complexity and scope.We strive to deliver
+        high
+        quality results within a reasonable timeframe, ensuring that your project meets both deadlines and
+        expections.
       </p>
     </div>
   </details>
@@ -506,7 +521,8 @@
   <details>
     <summary>Do you provide ongoing support after the project is completed?</summary>
     <div class="content-text">
-      <p>Yes, we belive in establishing long-term partnerships with our clients.We offer ongoing suppoert and maintence
+      <p>Yes, we belive in establishing long-term partnerships with our clients.We offer ongoing suppoert and
+        maintence
         services to ensure that your website or digital solution continues to perform optimally after launch.Our
         dedicated support team is available to address any questions or cencerns you may have.</p>
     </div>
@@ -519,7 +535,8 @@
       Can you help with websites updates and modification?
     </summary>
     <div class="content-text">
-      <p>Absolutely. We understand that businesses evolve over time, and your website needs to reflect these changes.
+      <p>Absolutely. We understand that businesses evolve over time, and your website needs to reflect these
+        changes.
         Whether you
         need to add new features, update content, or make design modifications, our team is here to assist you every
         step of the
@@ -536,7 +553,8 @@
     <div class="content-text">
       <p>At Jtech Connect, we distinguish ourselves through our commitment to innovation, creativity, and customer
         satisfaction.
-        Our experienced team of developers, designers, and marketers collaborate closely with clients to deliver bespoke
+        Our experienced team of developers, designers, and marketers collaborate closely with clients to deliver
+        bespoke
         solutions that drive real business results.</p>
     </div>
   </details>
